--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 .panda-btn{
     color: white;
-    background: linear-gradient(#FF4891, rgb(190, 18, 233));
+    background: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
     border-radius: 10px;
     border: none;
     padding: 5px 20px;
